feat(database): add local PostgreSQL setup with Docker Compose
- Add `init.sql` for database initialization.
- Create `.env.example` and `.env.local` for connection configuration.
- Introduce `docker-compose.yml` for PostgreSQL service setup.
- Add local database setup documentation.
- Add database management scripts (`db:up`, `db:down`, `db:reset`) to `package.json`.

Resolves: GEO-77

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "pnpm run --recursive lint",
     "test": "pnpm run --recursive test",
     "clean": "pnpm run --recursive clean",
-    "install:all": "pnpm install"
+    "install:all": "pnpm install",
+    "db:up": "docker compose up -d postgres",
+    "db:down": "docker compose down",
+    "db:reset": "docker compose down -v && docker compose up -d postgres"
   },
   "keywords": [
     "job-search",
