--- a/packages/database/.env.example
+++ b/packages/database/.env.example
@@ -1,4 +1,4 @@
 # Database connection string
-# For local development: postgres://user:password@localhost:5432/database_name
+# For local development: postgres://opportune_dev:password123@localhost:5432/opportune_jobs_dev
 # For Railway: Will be automatically injected
-DATABASE_URL=
+DATABASE_URL=postgres://opportune_dev:password123@localhost:5432/opportune_jobs_dev
