feat: add database infrastructure with PostgreSQL and health check
- Add @opportune/database package with Drizzle ORM and postgres.js
- Configure Docker Compose for local PostgreSQL 17 development
- Implement database connection with environment variable support
- Add health check API endpoint for database connectivity testing
- Set up monorepo database scripts and workspace dependencies
- Include comprehensive local database setup documentation

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "test": "pnpm run --recursive test",
     "clean": "pnpm run --recursive clean",
     "install:all": "pnpm install",
-    "db:up": "docker compose up -d postgres",
-    "db:down": "docker compose down",
-    "db:reset": "docker compose down -v && docker compose up -d postgres"
+    "db:up": "cd packages/database && docker compose --env-file ../../.env.local up -d",
+    "db:down": "cd packages/database && docker compose down",
+    "db:reset": "cd packages/database && docker compose down -v && docker compose --env-file ../../.env.local up -d"
   },
   "keywords": [
     "job-search",
