--- a/packages/database/docker-compose.yml
+++ b/packages/database/docker-compose.yml
@@ -6,14 +6,13 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres_root_password
-      POSTGRES_DB: postgres
+      POSTGRES_USER: ${POSTGRES_USER:-opportune_dev}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password123}
+      POSTGRES_DB: ${POSTGRES_DB:-opportune_jobs_dev}
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-opportune_dev} -d ${POSTGRES_DB:-opportune_jobs_dev}"]
       interval: 10s
       timeout: 5s
       retries: 5
