--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
-# Local development database configuration
+# Database Configuration
 # Copy this file to .env.local and update values as needed
-DATABASE_URL=postgres://opportune_dev:password123@localhost:5432/opportune_jobs_dev
 
-# PostgreSQL connection details (for local Docker setup)
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_DB=opportune_jobs_dev
+# PostgreSQL Configuration (used by docker-compose.yml in packages/database/)
 POSTGRES_USER=opportune_dev
 POSTGRES_PASSWORD=password123
+POSTGRES_DB=opportune_jobs_dev
+
+# Database Connection String for Applications
+DATABASE_URL=postgresql://opportune_dev:password123@localhost:5432/opportune_jobs_dev
+
+# For Railway deployment, this will be automatically injected by Railway
+# DATABASE_URL=postgresql://user:password@host:port/database
