--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.5"
+    "next": "15.4.5",
+    "@opportune/database": "*",
+    "drizzle-orm": "^0.38.3"
   },
   "devDependencies": {
     "typescript": "~5.8.0",
